--- a/resources/sass/app.sass
+++ b/resources/sass/app.sass
@@ -1,22 +1,2 @@
-.cart-image
-    min-height: 80px
-    //width: 50% !important
-    object-fit: cover
-
-@media all and (min-width: 992px)
-    .dropdown-large
-        min-width: 400px !important //!important is here because I need to overwrite the bootstrap floating
-        margin-left: -200px !important
-
-.dropdown-item-non-hoverable //by default the Bootstrap has a hover effect on dropdown-item class. This has the same formatting but without the effect.
-    display: block
-    width: 100%
-    padding: .25rem 1rem
-    clear: both
-    font-weight: 400
-    color: #212529
-    text-align: inherit
-    text-decoration: none
-    white-space: nowrap
-    background-color: transparent
-    border: 0
+@use 'partials/cart'
+@use 'partials/footer'
